fix: ui flicker on changing tabs

--- a/react-app/styles/globals.css
+++ b/react-app/styles/globals.css
@@ -4,6 +4,7 @@
 
 html {
   overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 html,
